welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: not found: value -
    case ( -, vacation) => "10:00"
           ^alarmClock:5: error: not found: value -
    case (0|6, -) => "10:00"
               ^alarmClock:6: error: not found: value -
    case (-,-) => "7:00"
          ^alarmClock:6: error: not found: value -
    case (-,-) => "7:00"
            ^